JBR-8119 JBR-9104 JBR-9106 OpenGL: shared textures